--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- For Main. Created by Yamushev Igor on 16.11.14 -->
+    <dimen name="paddingTop"> 10dp </dimen>
+    <dimen name="bigTxtSize"> 25sp </dimen>
+    <dimen name="mediumTxtSize"> 20sp </dimen>
 </resources>
