--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -22,6 +22,7 @@
         android:textStyle="bold"/>
 
     <TextView
+        android:id="@+id/tvAddNewAlarm"
         android:drawableLeft="@drawable/addnew1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
