--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -21,6 +21,16 @@
         android:textSize="@dimen/bigTxtSize"
         android:textStyle="bold"/>
 
+    <View
+        android:id="@+id/OverLine"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@drawable/dottedline"
+        android:layerType="software"/>
+
+    <!-- layerType потому что есть какой-то баг в атндроиде - линия не прерывистая
+      нужно отключить хардовое ускорение-->
+
     <TextView
         android:id="@+id/tvAddNewAlarm"
         android:drawableLeft="@drawable/addnew1"
@@ -29,5 +39,12 @@
         android:text="@string/addNewAlarm"
         android:gravity="center_vertical"
         android:textSize="@dimen/mediumTxtSize"/>
+
+    <View
+        android:id="@+id/UnderLine"
+        android:layout_width="fill_parent"
+        android:layout_height="10dp"
+        android:background="@drawable/dottedline"
+        android:layerType="software"/>
 
 </LinearLayout>
