Some addiitions 1) ShakeActivity - загрузка картинки теперь не из кода 2) MainActivity - много чего 3) strings and en-strings 4) AndroidManifest - описаны settings and shake

--- a/app/src/main/res/layout/shake.xml
+++ b/app/src/main/res/layout/shake.xml
@@ -22,6 +22,7 @@
     <ImageView
         android:layout_width="200dp"
         android:layout_height="150dp"
+        android:src="@drawable/shake"
         android:id="@+id/ivImg"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.36"
