--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -4,229 +4,251 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:weightSum="1">
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView"
+        android:layout_gravity="center_horizontal" >
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/buttonCancel"
-            android:id="@+id/cancelButton"
-            android:layout_weight="0.27"
-            android:onClick="onCancelButtonClick" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/buttonSave"
-            android:id="@+id/confirmButton"
-            android:layout_weight="0.69"
-            android:onClick="onConfirmButtonClick" />
-    </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:weightSum="1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/timeLabel"
-        android:id="@+id/timeLabel" />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/buttonCancel"
+                    android:id="@+id/cancelButton"
+                    android:layout_weight="0.27"
+                    android:onClick="onCancelButtonClick" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/timePickerLabel"
-        android:layout_gravity="center_horizontal"
-        android:onClick="setTime"
-        android:clickable="true" />
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/buttonSave"
+                    android:id="@+id/confirmButton"
+                    android:layout_weight="0.69"
+                    android:onClick="onConfirmButtonClick" />
+            </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/daysLabel"
-        android:id="@+id/daysLabel" />
-
-    <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/daysMn"
-            android:id="@+id/checkBox1"
-            android:checked="false"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:onClick="setDays" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/daysTu"
-            android:id="@+id/checkBox2"
-            android:checked="false"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/checkBox1"
-            android:layout_toEndOf="@+id/checkBox1"
-            android:onClick="setDays" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/daysWe"
-            android:id="@+id/checkBox3"
-            android:checked="false"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/checkBox2"
-            android:layout_toEndOf="@+id/checkBox2"
-            android:onClick="setDays" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/daysTh"
-            android:id="@+id/checkBox4"
-            android:checked="false"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/checkBox3"
-            android:layout_toEndOf="@+id/checkBox3"
-            android:onClick="setDays" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/daysFr"
-            android:id="@+id/checkBox5"
-            android:checked="false"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/checkBox4"
-            android:layout_toEndOf="@+id/checkBox4"
-            android:onClick="setDays" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/daysSa"
-            android:id="@+id/checkBox6"
-            android:checked="false"
-            android:layout_below="@+id/checkBox3"
-            android:layout_toRightOf="@+id/checkBox3"
-            android:layout_toEndOf="@+id/checkBox3"
-            android:onClick="setDays" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/daysSu"
-            android:id="@+id/checkBox7"
-            android:checked="false"
-            android:layout_alignTop="@+id/checkBox6"
-            android:layout_alignLeft="@+id/checkBox5"
-            android:layout_alignStart="@+id/checkBox5"
-            android:onClick="setDays" />
-    </RelativeLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/volumeLabel"
-        android:id="@+id/volumeLabel" />
-
-    <SeekBar
-        android:layout_width="302dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/volume"
-        android:layout_gravity="center_horizontal"
-        android:indeterminate="false"
-        android:max="@integer/volumeMax"
-        android:progress="@integer/volumeDefault" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/signalLabel"
-        android:id="@+id/signalLabel" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/signal"
-        android:layout_gravity="center_horizontal"
-        android:onClick="setSignal" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/activityLabel"
-        android:id="@+id/activityLabel" />
-
-    <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
-
-        <RadioGroup
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:id="@+id/activityGroup">
-
-            <RadioButton
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/activityArithmetic"
-                android:id="@+id/arithmetic"
-                android:checked="false"
-                android:onClick="setActivity" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/timeLabel"
+                android:id="@+id/timeLabel" />
 
-            <RadioButton
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/activityShake"
-                android:id="@+id/shake"
-                android:checked="false"
-                android:onClick="setActivity" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/timePickerLabel"
+                android:layout_gravity="center_horizontal"
+                android:onClick="setTime"
+                android:clickable="true" />
 
-            <RadioButton
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/activityChoose"
-                android:id="@+id/choose"
-                android:checked="false"
-                android:onClick="setActivity" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/daysLabel"
+                android:id="@+id/daysLabel" />
 
-            <RadioButton
+            <RelativeLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/daysMn"
+                    android:id="@+id/checkBox1"
+                    android:checked="false"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:onClick="setDays" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/daysTu"
+                    android:id="@+id/checkBox2"
+                    android:checked="false"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@+id/checkBox1"
+                    android:layout_toEndOf="@+id/checkBox1"
+                    android:onClick="setDays" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/daysWe"
+                    android:id="@+id/checkBox3"
+                    android:checked="false"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@+id/checkBox2"
+                    android:layout_toEndOf="@+id/checkBox2"
+                    android:onClick="setDays" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/daysTh"
+                    android:id="@+id/checkBox4"
+                    android:checked="false"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@+id/checkBox3"
+                    android:layout_toEndOf="@+id/checkBox3"
+                    android:onClick="setDays" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/daysFr"
+                    android:id="@+id/checkBox5"
+                    android:checked="false"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@+id/checkBox4"
+                    android:layout_toEndOf="@+id/checkBox4"
+                    android:onClick="setDays" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/daysSa"
+                    android:id="@+id/checkBox6"
+                    android:checked="false"
+                    android:layout_below="@+id/checkBox3"
+                    android:layout_toRightOf="@+id/checkBox3"
+                    android:layout_toEndOf="@+id/checkBox3"
+                    android:onClick="setDays" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/daysSu"
+                    android:id="@+id/checkBox7"
+                    android:checked="false"
+                    android:layout_alignTop="@+id/checkBox6"
+                    android:layout_alignLeft="@+id/checkBox5"
+                    android:layout_alignStart="@+id/checkBox5"
+                    android:onClick="setDays" />
+            </RelativeLayout>
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/activityPhrase"
-                android:id="@+id/phrase"
-                android:checked="false"
-                android:onClick="setActivity" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/volumeLabel"
+                android:id="@+id/volumeLabel" />
 
-            <RadioButton
+            <SeekBar
+                android:layout_width="302dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/volume"
+                android:layout_gravity="center_horizontal"
+                android:indeterminate="false"
+                android:max="@integer/volumeMax"
+                android:progress="@integer/volumeDefault" />
+
+            <Switch
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/activityNoActivity"
-                android:id="@+id/noActivity"
-                android:checked="false"
-                android:onClick="setActivity" />
-        </RadioGroup>
-    </RelativeLayout>
+                android:text="@string/vibrationLabel"
+                android:id="@+id/vibration"
+                android:layout_gravity="center_horizontal"
+                android:checked="false" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/signalLabel"
+                android:id="@+id/signalLabel" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:id="@+id/signal"
+                android:layout_gravity="center_horizontal"
+                android:onClick="setSignal"
+                android:clickable="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/activityLabel"
+                android:id="@+id/activityLabel" />
+
+            <RelativeLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <RadioGroup
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:id="@+id/activityGroup">
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/activityArithmetic"
+                        android:id="@+id/arithmetic"
+                        android:checked="false"
+                        android:onClick="setActivity" />
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/activityShake"
+                        android:id="@+id/shake"
+                        android:checked="false"
+                        android:onClick="setActivity" />
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/activityChoose"
+                        android:id="@+id/choose"
+                        android:checked="false"
+                        android:onClick="setActivity" />
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/activityPhrase"
+                        android:id="@+id/phrase"
+                        android:checked="false"
+                        android:onClick="setActivity" />
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/activityNoActivity"
+                        android:id="@+id/noActivity"
+                        android:checked="false"
+                        android:onClick="setActivity" />
+                </RadioGroup>
+            </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
