--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -104,8 +104,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
+        android:text="@string/checkAnswer"
+        android:id="@+id/checkButton"
         android:layout_gravity="center_horizontal"
         android:onClick="checkMultiplicity"/>
 
