--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -65,78 +65,88 @@
                 android:text="@string/daysLabel"
                 android:id="@+id/daysLabel" />
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"></TableRow>
-
-            <LinearLayout
+            <RelativeLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="68dp">
 
                 <CheckBox
-                    android:layout_width="0dip"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/daysMn"
                     android:id="@+id/checkBox1"
                     android:checked="false"
                     android:onClick="setDays"
-                    android:layout_weight="0.142" />
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
 
                 <CheckBox
-                    android:layout_width="0dip"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/daysTu"
                     android:id="@+id/checkBox2"
                     android:checked="false"
                     android:onClick="setDays"
-                    android:layout_weight="0.142" />
+                    android:layout_toEndOf="@+id/checkBox1"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@+id/checkBox1" />
 
                 <CheckBox
-                    android:layout_width="0dip"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/daysWe"
                     android:id="@+id/checkBox3"
                     android:checked="false"
                     android:onClick="setDays"
-                    android:layout_weight="0.142" />
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@+id/checkBox2"
+                    android:layout_toEndOf="@+id/checkBox2" />
 
                 <CheckBox
-                    android:layout_width="0dip"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/daysTh"
                     android:id="@+id/checkBox4"
                     android:checked="false"
                     android:onClick="setDays"
-                    android:layout_weight="0.142" />
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@+id/checkBox3"
+                    android:layout_toEndOf="@+id/checkBox3" />
 
                 <CheckBox
-                    android:layout_width="0dip"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/daysFr"
                     android:id="@+id/checkBox5"
                     android:checked="false"
                     android:onClick="setDays"
-                    android:layout_weight="0.142" />
+                    android:layout_below="@+id/checkBox1"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
 
                 <CheckBox
-                    android:layout_width="0dip"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/daysSa"
                     android:id="@+id/checkBox6"
                     android:checked="false"
                     android:onClick="setDays"
-                    android:layout_weight="0.142" />
+                    android:layout_below="@+id/checkBox3"
+                    android:layout_toRightOf="@+id/checkBox5"
+                    android:layout_toEndOf="@+id/checkBox5" />
 
                 <CheckBox
-                    android:layout_width="0dip"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/daysSu"
                     android:id="@+id/checkBox7"
                     android:checked="false"
                     android:onClick="setDays"
-                    android:layout_weight="0.142" />
-            </LinearLayout>
+                    android:layout_below="@+id/checkBox4"
+                    android:layout_toRightOf="@+id/checkBox6"
+                    android:layout_toEndOf="@+id/checkBox6" />
+            </RelativeLayout>
 
             <TextView
                 android:layout_width="wrap_content"
