--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -7,11 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/scrollViewMain"
-        android:layout_gravity="center_horizontal" >
+    <!--<ScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:id="@+id/scrollViewMain"-->
+        <!--android:layout_gravity="center_horizontal" >-->
 
         <LinearLayout
             android:orientation="vertical"
@@ -61,6 +61,9 @@
 
          </LinearLayout>
 
-    </ScrollView>
+    <!--</ScrollView>-->
+            <ListView android:id="@+id/lvMain"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"/>
 
 </LinearLayout>
