--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -182,11 +182,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:id="@+id/signal"
                 android:layout_gravity="center_horizontal"
-                android:onClick="setSignalTextView"
-                android:clickable="true" />
+                android:clickable="true"
+                android:enabled="true"
+                android:onClick="setSignal" />
 
             <TextView
                 android:layout_width="wrap_content"
